extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/casenoclause.out
* errors
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/casenoclause.ob:8:5:error: clause expected
    END
    ^
