extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L2/tests/casenoclause.ob
MODULE casenoclause;

VAR
    avar : INTEGER;

BEGIN
    CASE avar OF
    END
END casenoclause.
